# python-project-83

./: .env.sample  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: __init__.py  app.py  parser.py  url.py  validator.py
page_analyzer/templates/: 404.html  all_urls.html  base.html  index.html  show.html
tests/: test_page_analyzer.py
